--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="pages/mision.html">Misión</a></li>
 				<li><a href="pages/prendas.html">Prendas</a></li>
+				<li><a href="pages/agenda.html">Agenda</a></li>
 				<li><a href="pages/contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
@@ -62,21 +63,23 @@
 	<!-- inicio de footer --> 
 	<footer class="footer">
 		<img src="img/logo1.png" alt="logoImagen" class="logoImagen"></img>
-		<h4>Contacto</h4>
-		<table>
-			<tr>
-				<td><img src="img/whatsapp.jpeg" alt="icono whatsapp" class="icono"></img></td>
-				<td>(+598) 95 531 467</td>
-			</tr>
-			<tr>
-				<td><img src="img/mail.jpeg" alt="icono mail" class="icono"></td>
-				<td>manubarrandeguy@gmail.com</td>
-			</tr>
-			<tr>
-				<td><img src="img/instagram.jpeg" alt="icono instagram" class="icono"></td>
-				<td href="https://www.instagram.com/manu.be_">@manu.be_</td>
-			</tr>
-		</table>
+		<section class="infoFooter">
+			<h4>Contacto</h4>
+			<table>
+				<tr>
+					<td><img src="img/whatsapp.jpeg" alt="icono whatsapp" class="icono"></img></td>
+					<td>(+598) 95 531 467</td>
+				</tr>
+				<tr>
+					<td><img src="img/mail.jpeg" alt="icono mail" class="icono"></td>
+					<td>manubarrandeguy@gmail.com</td>
+				</tr>
+				<tr>
+					<td><img src="img/instagram.jpeg" alt="icono instagram" class="icono"></td>
+					<td href="https://www.instagram.com/manu.be_">@manu.be_</td>
+				</tr>
+			</table>
+		</section>
 	</footer>
     <!-- cierre de footer --> 
 </body>
