--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,45 +29,30 @@
 	<main class="main">
 		<section>
             <h3>Ubicación</h3>
-            <div class="mapaResponsive">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.764896499605!2d-56.061227948780854!3d-34.88724957996671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f87f9685c610b%3A0x484c188be79c1ddf!2sSport%20House!5e0!3m2!1ses-419!2suy!4v1678545080788!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.764896499605!2d-56.061227948780854!3d-34.88724957996671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f87f9685c610b%3A0x484c188be79c1ddf!2sSport%20House!5e0!3m2!1ses-419!2suy!4v1678545080788!5m2!1ses-419!2suy" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 		</section>
 		<section>
             <h3>Redes</h3>
-            <div>
-				<img src="../img/whatsapp.jpeg" alt="icono whatsapp" class="icono"></img>
-				<a>(+598) 95 531 467</a>
+            <div class="red">
+			    <img src="../img/whatsapp.jpeg" alt="icono whatsapp" class="iconoGrande"></img>
+			    <a>(+598) 95 531 467</a>
+		    </div>
+    	    <div class="red">
+			    <img src="../img/mail.jpeg" alt="icono mail" class="iconoGrande">
+				 <a>manubarrandeguy@gmail.com</a>
 			</div>
-			<div>
-				<img src="../img/mail.jpeg" alt="icono mail" class="icono">
-				<a>manubarrandeguy@gmail.com</a>
-			</div>
-			<div>
-				<img src="../img/instagram.jpeg" alt="icono instagram" class="icono">
-				<a href="https://www.instagram.com/manu.be_">@manu.be_</a>
-			</div>
+		    <div class="red">
+			    <img src="../img/instagram.jpeg" alt="icono instagram" class="iconoGrande">
+			    <a href="https://www.instagram.com/manu.be_">@manu.be_</a>
+		    </div>
 		</section>
 	</main>
 	<!-- cierre de fila de información de mi sitio -->
 	<!-- inicio de footer --> 
 	<footer class="footer">
 		<img src="../img/logo1.png" alt="logoImagen" class="logoImagen"></img>
-		<h4>Contacto</h4>
-		<table>
-			<tr>
-				<td><img src="../img/whatsapp.jpeg" alt="icono whatsapp" class="icono"></img></td>
-				<td>(+598) 95 531 467</td>
-			</tr>
-			<tr>
-				<td><img src="../img/mail.jpeg" alt="icono mail" class="icono"></td>
-				<td>manubarrandeguy@gmail.com</td>
-			</tr>
-			<tr>
-				<td><img src="../img/instagram.jpeg" alt="icono instagram" class="icono"></td>
-				<td href="https://www.instagram.com/manu.be_">@manu.be_</td>
-			</tr>
-		</table>
 	</footer>
     <!-- cierre de footer --> 
 </body>
