--- a/pages/prendas.html
+++ b/pages/prendas.html
@@ -142,21 +142,23 @@
 	<!-- inicio de footer --> 
 	<footer class="footer">
 		<img src="../img/logo1.png" alt="logoImagen" class="logoImagen"></img>
-		<h4>Contacto</h4>
-		<table>
-			<tr>
-				<td><img src="../img/whatsapp.jpeg" alt="icono whatsapp" class="icono"></img></td>
-				<td>(+598) 95 531 467</td>
-			</tr>
-			<tr>
-				<td><img src="../img/mail.jpeg" alt="icono mail" class="icono"></td>
-				<td>manubarrandeguy@gmail.com</td>
-			</tr>
-			<tr>
-				<td><img src="../img/instagram.jpeg" alt="icono instagram" class="icono"></td>
-				<td href="https://www.instagram.com/manu.be_">@manu.be_</td>
-			</tr>
-		</table>
+		<section class="infoFooter">
+			<h4>Contacto</h4>
+			<table>
+				<tr>
+					<td><img src="../img/whatsapp.jpeg" alt="icono whatsapp" class="icono"></img></td>
+					<td>(+598) 95 531 467</td>
+				</tr>
+				<tr>
+					<td><img src="../img/mail.jpeg" alt="icono mail" class="icono"></td>
+					<td>manubarrandeguy@gmail.com</td>
+				</tr>
+				<tr>
+					<td><img src="../img/instagram.jpeg" alt="icono instagram" class="icono"></td>
+					<td href="https://www.instagram.com/manu.be_">@manu.be_</td>
+				</tr>
+			</table>
+		</section>
 	</footer>
     <!-- cierre de footer --> 
 </body>
